--- a/client/styles.css
+++ b/client/styles.css
@@ -25,16 +25,27 @@ h2 {
 .chirps {
     font-size: 20px;
     color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.current {
+.flex-column {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-button {
-    color: rgb(59, 59, 59);
-    font-size: 20px;
+.current {
+    display: flex;
+    justify-content: center;
+}
+
+#submit {
     margin-left: 1rem;
+}
+
+.details {
+    margin-left: 1rem;
+    height: 20px;
 }
