--- a/client/styles.css
+++ b/client/styles.css
@@ -41,11 +41,17 @@ h2 {
     justify-content: center;
 }
 
-#submit {
+button {
     margin-left: 1rem;
 }
 
 .details {
     margin-left: 1rem;
     height: 20px;
+}
+
+.homelink {
+    color: rgb(29, 161, 242);
+    display: flex;
+    justify-content: center;
 }
